src/main/java/com/example/payroll/web/error/RoleAlreadyExistsException.java
package com.example.payroll.web.error;

public class RoleAlreadyExistsException extends RuntimeException {

    public RoleAlreadyExistsException() {
        super();
    }

    public RoleAlreadyExistsException(String message) {
        super(message);
    }
}
